[gd_scene load_steps=2 format=3 uid="uid://bqx8v7k2m3n4o"]

[ext_resource type="Script" path="res://scenes/ui/OptionsMenu.gd" id="1_0"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_0")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="ScreenShake" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/ScreenShake"]
layout_mode = 2
text = "Screen Shake:"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/ScreenShake"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.1
value = 0.5

[node name="DamageFlash" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/DamageFlash"]
layout_mode = 2
text = "Damage Flash:"

[node name="CheckBox" type="CheckBox" parent="Control/VBoxContainer/DamageFlash"]
layout_mode = 2
button_pressed = true

[node name="AimAssist" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/AimAssist"]
layout_mode = 2
text = "Aim Assist:"

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/AimAssist"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.25

[node name="Difficulty" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Difficulty"]
layout_mode = 2
text = "Difficulty:"

[node name="OptionButton" type="OptionButton" parent="Control/VBoxContainer/Difficulty"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputRemap" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Input Remapping"

[node name="CloseButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Close (2)"